Added 20260708171835_create_vouchers_table.sql
