# artifacts/api-server/src/routes/index.ts
@@ -5,6 +5,7 @@ import roomsRouter from "./rooms";
 import guestsRouter from "./guests";
 import reservationsRouter from "./reservations";
 import paymentsRouter from "./payments";
+import vouchersRouter from "./vouchers";
 import reportsRouter from "./reports";
 import settingsRouter from "./settings";
 import usersRouter from "./users";
@@ -17,6 +18,7 @@ router.use(roomsRouter);
 router.use(guestsRouter);
 router.use(reservationsRouter);
 router.use(paymentsRouter);
+router.use(vouchersRouter);
 router.use(reportsRouter);
 router.use(settingsRouter);
 router.use(usersRouter);
